<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cd_boarding_illustration">Boarding Illustration</string>
    <string name="start_icon">StartIcon</string>

    <!--Homepage Tab Layout-->
    <string name="grocery">Grocery</string>
    <string name="food">Food</string>
    <string name="virtual">Virtual</string>

    <!--Homepage Switcher-->
    <string name="switcher_xpress_title">Belanja Xpress</string>
    <string name="switcher_xpress_subtitle">Estimasi tiba hari ini</string>
    <string name="switcher_xtra_title">Belanja Xtra</string>
    <string name="switcher_xtra_subtitle">Estimasi tiba 1-3 hari</string>
</resources>