<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/dimen_0"
        android:background="@color/black_20"
        app:shapeAppearance="@style/ShapeAppearance.EDTS.UIKit.LargeComponent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/activeTab"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/dimen_0"
        app:shapeAppearance="@style/ShapeAppearance.EDTS.UIKit.LargeComponent"
        android:clickable="true"
        android:focusable="true"
        android:elevation="@dimen/dimen_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/centerGuideline"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@color/secondary_30"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/xpressTab"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/centerGuideline"
        android:clipToPadding="false"
        android:clipChildren="false">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivXpressLogo"
            android:layout_width="@dimen/m1"
            android:layout_height="@dimen/m1"
            android:layout_marginTop="@dimen/xxs"
            android:layout_marginStart="@dimen/s"
            app:srcCompat="@drawable/ic_flash_xpress_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:tint="@color/white"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvXpressTitle"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxs"
            android:layout_marginStart="@dimen/xxs"
            android:layout_marginEnd="@dimen/s"
            android:text="@string/switcher_xpress_title"
            android:textColor="@color/black_60"
            android:textAppearance="@style/TextAppearance.Inter.Semibold.H3"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivXpressLogo"
            app:layout_constraintEnd_toEndOf="parent"
            tools:textColor="@color/white"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvXpressSubtitle"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxs"
            android:layout_marginEnd="@dimen/s"
            android:layout_marginBottom="@dimen/xxs"
            android:text="@string/switcher_xpress_subtitle"
            android:textColor="@color/black_40"
            android:textAppearance="@style/TextAppearance.Inter.Regular.B4"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/tvXpressTitle"
            app:layout_constraintStart_toEndOf="@id/ivXpressLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/xtraTab"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/centerGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipChildren="false"
        android:clipToPadding="false">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivXtraLogo"
            android:layout_width="@dimen/s"
            android:layout_height="@dimen/s"
            android:layout_marginTop="@dimen/xxs"
            android:layout_marginStart="@dimen/s"
            app:srcCompat="@drawable/ic_box_xtra_16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvXtraTitle"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxs"
            android:layout_marginStart="@dimen/xxs"
            android:layout_marginEnd="@dimen/s"
            android:text="@string/switcher_xtra_title"
            android:textColor="@color/black_60"
            android:textAppearance="@style/TextAppearance.Inter.Semibold.H3"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivXtraLogo"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvXtraSubtitle"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxs"
            android:layout_marginEnd="@dimen/s"
            android:layout_marginBottom="@dimen/xxs"
            android:text="@string/switcher_xtra_subtitle"
            android:textColor="@color/black_40"
            android:textAppearance="@style/TextAppearance.Inter.Regular.B4"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/tvXtraTitle"
            app:layout_constraintStart_toEndOf="@id/ivXtraLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>